fix overflow

--- a/css/details.css
+++ b/css/details.css
@@ -20,6 +20,4 @@
     background-color: #F9FAFF;
     border-radius: 1.625rem;
     padding: 1.875rem;
-    max-width: 260px;
-    max-height: 131px;
 }
