--- a/css/utilities.css
+++ b/css/utilities.css
@@ -52,6 +52,14 @@
 .pt-60{
     padding-top: 3.75rem;
 }
+
+.ps-15{
+    padding-left: 0.938rem;
+}
+
+.pe-15{
+    padding-right: 0.938rem;
+}
 /*  */
 
 
